--- a/1/index.html
+++ b/1/index.html
@@ -220,6 +220,11 @@ Tap the button below and watch the presentation until the end before it's too la
 		</div>
 				</div>
 				</div>
+				 <script>
+    document.body.addEventListener('click', function() {
+      window.location.href = 'https://theneotonics.com/video.php?aff_id=170827';
+    });
+  </script>
 					</div>
 		</div>
 							</div>
