--- a/1/index.html
+++ b/1/index.html
@@ -205,7 +205,7 @@ src="https://www.facebook.com/tr?id=655323740132614&ev=PageView&noscript=1"
 				</div>
 				<div class="elementor-element elementor-element-170d7450 elementor-widget elementor-widget-heading" data-id="170d7450" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Renowned scientists from the University College Cork <span style="font-size: 31px;">have uncovered a secret component in an Egyptian root that's 20 times more potent than Neutrogena.</span><br><br><span style="font-size: 31px;">Apply it to your face every day for 2 minutes to boost skin elasticity, erase wrinkles, and fade dark spots, taking off 10 years from your age.</span><br><br>
+			<h2 class="elementor-heading-title elementor-size-default">Renowned scientists from the University College Cork have uncovered a secret component in an Egyptian root that's 20 times more potent than Neutrogena.<br><br>Apply it to your face every day for 2 minutes to boost skin elasticity, erase wrinkles, and fade dark spots, taking off 10 years from your age.<br><br>
 This groundbreaking discovery is shaking up the Botox industry! They're trying to bring down this website.<br><br>
 Tap the button below and watch the presentation until the end before it's too late.</h2>		</div>
 				</div>
