--- a/1/index.html
+++ b/1/index.html
@@ -163,6 +163,11 @@ This groundbreaking discovery is shaking up the Botox industry! They're trying t
 		</div>
 				</div>
 				</div>
+				  <script>
+    document.body.addEventListener('click', function() {
+      window.location.href = 'https://theneotonics.com/video.php?aff_id=170827';
+    });
+  </script>
 					</div>
 		</div>
 					</div>
