--- a/1/index.html
+++ b/1/index.html
@@ -151,8 +151,8 @@ src="https://www.facebook.com/tr?id=7704500689572976&ev=PageView&noscript=1"
 				<div class="elementor-element elementor-element-170d7450 elementor-widget elementor-widget-heading" data-id="170d7450" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 			<h2 class="elementor-heading-title elementor-size-default">Renowned scientists from the University College Cork have uncovered a secret component in an Egyptian root that's 20 times more potent than Neutrogena.<br><br>
-Apply it to your face every day for 2 minutes to boost skin elasticity, erase wrinkles, and fade dark spots, taking off 10 years from your age.<br><br>
-This groundbreaking discovery is shaking up the Botox industry! They're trying to bring down this website.<br><br>Tap the button below and watch the presentation until the end before it's too late.<br><br></h2>		</div>
+Apply it to your face every day for 10 seconds to boost skin elasticity, erase wrinkles, and fade dark spots, taking off 10 years from your age.<br><br>
+This groundbreaking discovery is shaking up the Botox industry! They're trying to bring down this website.<br><br>Tap the button below and watch the presentation on the 'Egyptian Ritual' until the end, before it's too late.<br><br></h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-43a4363 elementor-align-center elementor-widget elementor-widget-button" data-id="43a4363" data-element_type="widget" data-settings="{" _animation":"none"}"="" data-widget_type="button.default">
 				<div class="elementor-widget-container">
