--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="headline">99.8% of women don't know this</div>
         <div class="subheadline">Scientists reveal <span class="bold-text">how to remove wrinkles and skin spots in</span> minutes</div>
         <div class="image-container">
-            <a href="https://theneotonics.com/video.php?aff_id=170827"><img src="https://i.imgur.com/fnS914X.jpeg" alt="Amazing Skin Secret"></a>
+            <a href="https://theneotonics.com/video.php?aff_id=170827"><img src="images/play.webp" alt="Amazing Skin Secret"></a>
         </div>
         <a href="https://theneotonics.com/video.php?aff_id=170827" class="cta-button">Tap Here To Watch The Video</a>
         <div class="main-text">
