--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazing Skin Secret</title>
@@ -110,7 +110,7 @@
             }
         }
     </style>
-    <!-- Meta Pixel Code -->
+            <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -121,27 +121,16 @@ t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
 fbq('init', '1130855064735398');
+fbq('init', '389774947135950');
+fbq('init', '423241836733401');
+fbq('init', '7704500689572976');
 fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=1130855064735398&ev=PageView&noscript=1"/>
-</noscript>
-<!-- End Meta Pixel Code -->
-    <!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '389774947135950');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=389774947135950&ev=PageView&noscript=1"/>
+src="https://www.facebook.com/tr?id=423241836733401&ev=PageView&noscript=1"/>
+src="https://www.facebook.com/tr?id=7704500689572976&ev=PageView&noscript=1"/>
 </noscript>
 <!-- End Meta Pixel Code -->
 </head>
