--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta name="facebook-domain-verification" content="ffziuej3hbuqeyblp8mlduj9vj7sti" />
 <html lang="en">
     <head>
     <meta charset="UTF-8">
