--- a/darkspots/index.html
+++ b/darkspots/index.html
@@ -146,7 +146,7 @@ src="https://www.facebook.com/tr?id=650866680471113&ev=PageView&noscript=1"/>
         </div>
         <a href="https://theilluderma.com/video.php?aff_id=10526" class="cta-button">Tap Here To Watch The Video</a>
         <div class="main-text">
-           Scientists have discovered a skin treatment 20 times more potent than Retinol!
+           Scientists have discovered a skin treatment 20 times more potent than Retinol and Neutrogena!
             <br><br>
              Just 5 seconds daily can reduce wrinkles, dark spots, and restore skin elasticity, making you look a decade younger.<br><br>
             No need to spend more money on expensive creams or Botox! The Botox industry is concerned and attempting to take down this website. Click below to learn more and join over 76,000 women benefiting from this breakthrough.<br><br>
