--- a/darkspots/index.html
+++ b/darkspots/index.html
@@ -152,7 +152,7 @@ src="https://www.facebook.com/tr?id=650866680471113&ev=PageView&noscript=1"/>
             No need to spend more money on expensive creams or Botox! The Botox industry is concerned and attempting to take down this website. Click below to learn more and join over 76,000 women benefiting from this breakthrough.<br><br>
             Don't waste time! Click to watch and see until the end before it's too late.
         </div>
-        <a href="https://thepureluminessence.com/video.php?aff_id=790" class="cta-button">Watch Now</a>
+        <a href="https://theilluderma.com/video.php?aff_id=10526" class="cta-button">Watch Now</a>
     </div>
     <div class="footer">
         <p><a href="https://theilluderma.com/video.php?aff_id=10526" style="color: #fff; text-decoration: none;">Privacy Policy | Earnings | Contact</a></p>
