--- a/darkspots/index.html
+++ b/darkspots/index.html
@@ -142,20 +142,20 @@ src="https://www.facebook.com/tr?id=650866680471113&ev=PageView&noscript=1"/>
         <div class="headline">99.8% of women don't know this</div>
         <div class="subheadline">Scientists reveal <span class="bold-text">how to remove dark spots in</span> minutes</div>
         <div class="image-container">
-            <a href="https://theilluderma.com/video.php?aff_id=10526"><img src="images/play2.webp" alt="Amazing Skin Secret"></a>
+            <a href="https://thepureluminessence.com/video.php?aff_id=790"><img src="images/play2.webp" alt="Amazing Skin Secret"></a>
         </div>
-        <a href="https://theilluderma.com/video.php?aff_id=10526" class="cta-button">Tap Here To Watch The Video</a>
+        <a href="https://thepureluminessence.com/video.php?aff_id=790" class="cta-button">Tap Here To Watch The Video</a>
         <div class="main-text">
-           Scientists have discovered a skin treatment 20 times more potent than Retinol and Neutrogena!
+           Harvard scientists have discovered a skin treatment 20 times more potent than Retinol and Neutrogena!
             <br><br>
              Just 5 seconds daily can reduce wrinkles, dark spots, and restore skin elasticity, making you look a decade younger.<br><br>
             No need to spend more money on expensive creams or Botox! The Botox industry is concerned and attempting to take down this website. Click below to learn more and join over 76,000 women benefiting from this breakthrough.<br><br>
             Don't waste time! Click to watch and see until the end before it's too late.
         </div>
-        <a href="https://theilluderma.com/video.php?aff_id=10526" class="cta-button">Watch Now</a>
+        <a href="https://thepureluminessence.com/video.php?aff_id=790" class="cta-button">Watch Now</a>
     </div>
     <div class="footer">
-        <p><a href="https://theilluderma.com/video.php?aff_id=10526" style="color: #fff; text-decoration: none;">Privacy Policy | Earnings | Contact</a></p>
+        <p><a href="https://thepureluminessence.com/video.php?aff_id=790" style="color: #fff; text-decoration: none;">Privacy Policy | Earnings | Contact</a></p>
         <p>Copyright 2024.</p>
         <p>All rights reserved</p>
         <p>This site is not affiliated with Facebook, Inc. or Facebook.com, and is not sponsored or endorsed by Facebook</p>
