--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
         <div class="headline">99.8% of women don't know this</div>
         <div class="subheadline">Scientists reveal <span class="bold-text">how to remove wrinkles and skin spots in</span> minutes</div>
         <div class="image-container">
-            <a href="https://theneotonics.com/video.php?aff_id=170827"><img src="images/play.webp" alt="Amazing Skin Secret"></a>
+            <a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}"><img src="images/play.webp" alt="Amazing Skin Secret"></a>
         </div>
         <a href="https://theneotonics.com/video.php?aff_id=170827" class="cta-button">Tap Here To Watch The Video</a>
         <div class="main-text">
@@ -154,10 +154,10 @@ src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
             This groundbreaking discovery is shaking up the Botox industry! They're trying to bring down this website.<br><br>
             Tap the button below and watch the presentation on the 'Egyptian Ritual' until the end, before it's too late.
         </div>
-        <a href="https://theneotonics.com/video.php?aff_id=170827" class="cta-button">Watch Now</a>
+        <a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}" class="cta-button">Watch Now</a>
     </div>
     <div class="footer">
-        <p><a href="https://theneotonics.com/video.php?aff_id=170827" style="color: #fff; text-decoration: none;">Privacy Policy | Earnings | Contact</a></p>
+        <p><a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}" style="color: #fff; text-decoration: none;">Privacy Policy | Earnings | Contact</a></p>
         <p>Copyright 2024.</p>
         <p>All rights reserved</p>
         <p>This site is not affiliated with Facebook, Inc. or Facebook.com, and is not sponsored or endorsed by Facebook</p>
