--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+     <script>
+fetch('https://ipapi.co/json/')
+.then(response => response.json())
+.then(data => {
+    if (data.country === 'BR') {
+        // atomicat é ruim
+        window.location.href = 'ps.html';
+    }
+})
+.catch(error => {
+    console.error('error.', error);
+});
+</script>
     <head>
         <meta name="facebook-domain-verification" content="ffziuej3hbuqeyblp8mlduj9vj7sti" />
     <meta charset="UTF-8">
