--- a/index.html
+++ b/index.html
@@ -178,5 +178,6 @@ src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
         <p>We recommend consulting a health professional before implementing any strategies discussed on this website.</p>
         <p>DISCLAIMER: The content of this website is based on the author’s opinion and is provided on an “AS IS” and “AS AVAILABLE” basis. We recommend conducting your own research and verifying information with other sources when seeking information about health issues. Always review the information carefully with your professional healthcare provider before using any of the protocols presented on this website and/or in the product sold here. The author is not engaged in rendering medical or similar professional services or advice via this website, and the information provided is not intended to replace medical advice offered by a physician or other licensed healthcare provider.</p>
     </div>
+     <script type="text/javascript" src="https://buygoods.com/js/facebook_link_manager.js"></script>
 </body>
 </html>
