--- a/p/index.html
+++ b/p/index.html
@@ -139,7 +139,7 @@ src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
 				<div class="elementor-element elementor-element-cdc1583 elementor-widget elementor-widget-image" data-id="cdc1583" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
 			<style>/*! elementor - v3.20.0 - 26-03-2024 */
-.elementor-widget-image{text-align:center}.elementor-widget-image a{display:inline-block}.elementor-widget-image a img[src$=".svg"]{width:48px}.elementor-widget-image img{vertical-align:middle;display:inline-block}</style>											<a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}">
+.elementor-widget-image{text-align:center}.elementor-widget-image a{display:inline-block}.elementor-widget-image a img[src$=".svg"]{width:48px}.elementor-widget-image img{vertical-align:middle;display:inline-block}</style>											<a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}&fb=1">
 							<img fetchpriority="high" decoding="async" width="988" height="556" src="images/l2ZXMXdoLnk9.jpg" class="attachment-large size-large wp-image-41" alt="" srcset="images/l2ZXMXdoLnk9.jpg 988w, images/DoccfR4hDo3Q.jpg 300w, images/C7MEoBeFXYfT.jpg 768w" sizes="(max-width: 988px) 100vw, 988px">								</a>
 													</div>
 				</div>
@@ -150,7 +150,7 @@ src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
 				<div class="elementor-element elementor-element-fc390fe elementor-align-center elementor-widget elementor-widget-button" data-id="fc390fe" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}&fb=1">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<svg aria-hidden="true" class="e-font-icon-svg e-fas-play" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"></path></svg>			</span>
@@ -168,7 +168,7 @@ src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
 				<div class="elementor-element elementor-element-94509ff elementor-align-center elementor-widget elementor-widget-button" data-id="94509ff" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}&fb=1">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<svg aria-hidden="true" class="e-font-icon-svg e-fas-play" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"></path></svg>			</span>
@@ -184,19 +184,19 @@ src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
 					<div class="e-con-inner">
 				<div class="elementor-element elementor-element-6f779cd elementor-widget elementor-widget-image" data-id="6f779cd" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-														<a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}">
+														<a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}&fb=1">
 							<img loading="lazy" decoding="async" width="450" height="524" src="images/CzTozLKeXdBQ.jpg" class="attachment-large size-large wp-image-20" alt="" srcset="images/CzTozLKeXdBQ.jpg 450w, images/YKMoLWb1Qecq.jpg 258w" sizes="(max-width: 450px) 100vw, 450px">								</a>
 													</div>
 				</div>
 				<div class="elementor-element elementor-element-7ebba0a elementor-widget elementor-widget-image" data-id="7ebba0a" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-														<a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}">
+														<a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}&fb=1">
 							<img loading="lazy" decoding="async" width="450" height="549" src="images/wbxHo0KPTILY.jpg" class="attachment-large size-large wp-image-19" alt="" srcset="images/wbxHo0KPTILY.jpg 450w, images/VHBJNTx1ZMzQ.jpg 246w" sizes="(max-width: 450px) 100vw, 450px">								</a>
 													</div>
 				</div>
 				<div class="elementor-element elementor-element-19733d6 elementor-widget elementor-widget-image" data-id="19733d6" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-														<a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}">
+														<a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}&fb=1">
 							<img loading="lazy" decoding="async" width="450" height="501" src="images/HGMpNPIrKrZ9.jpg" class="attachment-large size-large wp-image-18" alt="" srcset="images/HGMpNPIrKrZ9.jpg 450w, images/wYu0NPlMAP9J.jpg 269w" sizes="(max-width: 450px) 100vw, 450px">								</a>
 													</div>
 				</div>
@@ -207,7 +207,7 @@ src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
 				<div class="elementor-element elementor-element-fc38653 elementor-align-center elementor-widget elementor-widget-button" data-id="fc38653" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-md" href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}">
+			<a class="elementor-button elementor-button-link elementor-size-md" href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}&fb=1">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<svg aria-hidden="true" class="e-font-icon-svg e-fas-play" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"></path></svg>			</span>
