--- a/p/index.html
+++ b/p/index.html
@@ -125,7 +125,16 @@ src="https://www.facebook.com/tr?id=7704500689572976&ev=PageView&noscript=1"/>
 src="https://www.facebook.com/tr?id=650866680471113&ev=PageView&noscript=1"/>
 src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
 </noscript>
-<!-- End Meta Pixel Code -->		</div>
+<!-- End Meta Pixel Code -->
+				<script>
+!function (w, d, t) {
+  w.TiktokAnalyticsObject=t;var ttq=w[t]=w[t]||[];ttq.methods=["page","track","identify","instances","debug","on","off","once","ready","alias","group","enableCookie","disableCookie"],ttq.setAndDefer=function(t,e){t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var i=0;i<ttq.methods.length;i++)ttq.setAndDefer(ttq,ttq.methods[i]);ttq.instance=function(t){for(var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n]);return e},ttq.load=function(e,n){var i="https://analytics.tiktok.com/i18n/pixel/events.js";ttq._i=ttq._i||{},ttq._i[e]=[],ttq._i[e]._u=i,ttq._t=ttq._t||{},ttq._t[e]=+new Date,ttq._o=ttq._o||{},ttq._o[e]=n||{};var o=document.createElement("script");o.type="text/javascript",o.async=!0,o.src=i+"?sdkid="+e+"&lib="+t;var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(o,a)};
+
+  ttq.load('COEM6P3C77U7P5ED1KB0');
+  ttq.page();
+}(window, document, 'ttq');
+</script>
+				</div>
 				</div>
 				<div class="elementor-element elementor-element-f4bd50b elementor-widget elementor-widget-heading" data-id="f4bd50b" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
