--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
         <div class="headline">99.8% of women don't know this</div>
         <div class="subheadline">Scientists reveal <span class="bold-text">how to remove wrinkles and skin spots in</span> minutes</div>
         <div class="image-container">
-            <a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}"><img src="images/play.webp" alt="Amazing Skin Secret"></a>
+            <a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}"><img src="images/play.gif" alt="Amazing Skin Secret"></a>
         </div>
         <a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}" class="cta-button">Tap Here To Watch The Video</a>
         <div class="main-text">
