--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
         </div>
         <a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}" class="cta-button">Tap Here To Watch The Video</a>
         <div class="main-text">
-            Renowned scientists from the University College Cork have uncovered a secret component in an Egyptian root that's 20 times more potent than Retinol and Neutrogena.<br><br>
+            Renowned scientists have uncovered a secret component in an Egyptian root that's 20 times more potent than Retinol and Neutrogena.<br><br>
             Apply it to your face every day for 15 seconds to boost skin elasticity, erase wrinkles, and fade dark spots, taking off 10 years from your age.
             <br><br>
             This groundbreaking discovery is shaking up the Botox industry! They're trying to bring down this website.<br><br>
