--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ fetch('https://ipapi.co/json/')
             margin: 0;
             padding: 0;
             font-family: 'Poppins', sans-serif;
-            background-color: #f9f9f9;
+            background-color: #d4a0cb;
             color: #333;
         }
 
@@ -107,7 +107,7 @@ fetch('https://ipapi.co/json/')
         }
 
         .footer {
-            background-color: #002147; /* Cor azul escuro */
+            background-color: #d4a0cb; /* Cor */
             color: #fff;
             text-align: center;
             padding: 20px;
