--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ fetch('https://ipapi.co/json/')
             margin: 0;
             padding: 0;
             font-family: 'Poppins', sans-serif;
-            background-color: #d4a0cb;
+            background-color: #ffffff;
             color: #333;
         }
 
@@ -43,7 +43,7 @@ fetch('https://ipapi.co/json/')
             border-radius: 5px;
             font-size: 34px;
             color: #fff;
-            background-color: #005EAF;
+            background-color: #d4a0cb;
             font-size: 29px;
             line-height: 1;
             padding: 20px 0;
