--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ fetch('https://ipapi.co/json/')
 
         .bold-text {
             font-weight: bold;
-            color: red;
+            color: #ff018b;
         }
 
         .footer {
