--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ fetch('https://ipapi.co/json/')
             display: block;
             margin: 20px auto;
             padding: 15px 30px;
-            background-color: #FF9900;
+            background-color: #E8C718;
             color: #fff;
             text-align: center;
             text-decoration: none;
