--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@ src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
 </head>
 <body>
     <div class="container">
-        <div class="headline">99.8% of women don't know this</div>
-        <div class="subheadline">Scientists reveal <span class="bold-text">how to remove wrinkles and skin spots in</span> minutes</div>
+        <div class="headline">Aging Skin?</div>
+        <div class="subheadline">Scientist Reveals <span class="bold-text">"Egyptian Method" Restores</span> <u>Overnight</u></div>
         <div class="image-container">
             <a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}"><img src="images/play.gif" alt="Amazing Skin Secret"></a>
         </div>
