--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
 <body>
     <div class="container">
         <div class="headline">Aging Skin?</div>
-        <div class="subheadline">Scientist Reveals <span class="bold-text">"Egyptian Method" Restores</span> <u>Overnight</u></div>
+        <div class="subheadline">Scientists Reveal <span class="bold-text">"Egyptian Method" Restores</span> <u>Overnight</u></div>
         <div class="image-container">
             <a href="https://theneotonics.com/video.php?aff_id=170827&subid=&utm_campaign={{campaign.name}}&utm_medium=paid-traffic&utm_source={{site_source_name}}&utm_content={{ad.name}}&utm_term={{adset.name}}"><img src="images/play.gif" alt="Amazing Skin Secret"></a>
         </div>
