--- a/02/index.html
+++ b/02/index.html
@@ -124,33 +124,6 @@ fetch('https://ipapi.co/json/')
             }
         }
     </style>
-            <!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1130855064735398');
-fbq('init', '389774947135950');
-fbq('init', '423241836733401');
-fbq('init', '7704500689572976');
-fbq('init', '650866680471113');
-fbq('init', '402544965698848');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1130855064735398&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=389774947135950&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=423241836733401&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=7704500689572976&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=650866680471113&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
-</noscript>
-<!-- End Meta Pixel Code -->
 <script>
 		!function (w, d, t) {
 		  w.TiktokAnalyticsObject=t;var ttq=w[t]=w[t]||[];ttq.methods=["page","track","identify","instances","debug","on","off","once","ready","alias","group","enableCookie","disableCookie"],ttq.setAndDefer=function(t,e){t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var i=0;i<ttq.methods.length;i++)ttq.setAndDefer(ttq,ttq.methods[i]);ttq.instance=function(t){for(var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++
@@ -166,9 +139,9 @@ src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
         <div class="headline">Aging Skin?</div>
         <div class="subheadline">Scientists Reveal <span class="bold-text">"Egyptian Method" Restores</span> <u>Overnight</u></div>
         <div class="image-container">
-            <a href="https://theneotonics.com/video.php?aff_id=170827&subid=Tiktok02&subid2=__CAMPAIGN_NAME__&subid3=__AID_NAME__&sub4=__CID_NAME__&fb=1"><img src="images/play.gif" alt="Amazing Skin Secret"></a>
+            <a href="https://theneotonics.com/video.php?aff_id=170827&subid=Tiktok02&subid2=__CAMPAIGN_NAME__&subid3=__AID_NAME__&sub4=__CID_NAME__"><img src="images/play.gif" alt="Amazing Skin Secret"></a>
         </div>
-        <a href="https://theneotonics.com/video.php?aff_id=170827&subid=Tiktok02&subid2=__CAMPAIGN_NAME__&subid3=__AID_NAME__&sub4=__CID_NAME__&fb=1" class="cta-button">Tap Here To Watch The Video</a>
+        <a href="https://theneotonics.com/video.php?aff_id=170827&subid=Tiktok02&subid2=__CAMPAIGN_NAME__&subid3=__AID_NAME__&sub4=__CID_NAME__" class="cta-button">Tap Here To Watch The Video</a>
         <div class="main-text">
             Renowned scientists have uncovered a secret component in an Egyptian root that's 20 times more potent than Retinol and Neutrogena.<br><br>
             Apply it to your face every night for 15 seconds to revitalize the skin from within... eliminating wrinkles, dark spots and even stubborn fat... without any traditional methods such as expensive treatments, creams, diets or exercises, taking off 10 years from your age.
@@ -211,10 +184,10 @@ src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
 </script>
 
 </body>
-        <a href="https://theneotonics.com/video.php?aff_id=170827&subid=Tiktok02&subid2=__CAMPAIGN_NAME__&subid3=__AID_NAME__&sub4=__CID_NAME__&fb=1" class="cta-button">Watch Now</a>
+        <a href="https://theneotonics.com/video.php?aff_id=170827&subid=Tiktok02&subid2=__CAMPAIGN_NAME__&subid3=__AID_NAME__&sub4=__CID_NAME__ class="cta-button">Watch Now</a>
     </div>
     <div class="footer">
-        <p><a href="https://theneotonics.com/video.php?aff_id=170827&subid=Tiktok02&subid2=__CAMPAIGN_NAME__&subid3=__AID_NAME__&sub4=__CID_NAME__&fb=1" style="color: #fff; text-decoration: none;">Privacy Policy | Earnings | Contact</a></p>
+        <p><a href="https://theneotonics.com/video.php?aff_id=170827&subid=Tiktok02&subid2=__CAMPAIGN_NAME__&subid3=__AID_NAME__&sub4=__CID_NAME__" style="color: #fff; text-decoration: none;">Privacy Policy | Earnings | Contact</a></p>
         <p>Copyright 2024.</p>
         <p>All rights reserved</p>
         <p>This site is not affiliated with Facebook, Inc. or Facebook.com, and is not sponsored or endorsed by Facebook</p>
