--- a/02/index.html
+++ b/02/index.html
@@ -183,7 +183,7 @@ fetch('https://ipapi.co/json/')
 </script>
 
 </body>
-        <a href="https://theneotonics.com/video.php?aff_id=170827&subid=Tiktok02&subid2=__CAMPAIGN_NAME__&subid3=__AID_NAME__&sub4=__CID_NAME__ class="cta-button">Watch Now</a>
+        <a href="https://theneotonics.com/video.php?aff_id=170827&subid=Tiktok02&subid2=__CAMPAIGN_NAME__&subid3=__AID_NAME__&sub4=__CID_NAME__" class="cta-button">Watch Now</a>
     </div>
     <div class="footer">
         <p><a href="https://theneotonics.com/video.php?aff_id=170827&subid=Tiktok02&subid2=__CAMPAIGN_NAME__&subid3=__AID_NAME__&sub4=__CID_NAME__" style="color: #fff; text-decoration: none;">Privacy Policy | Earnings | Contact</a></p>
