--- a/03/index.html
+++ b/03/index.html
@@ -124,39 +124,12 @@ fetch('https://ipapi.co/json/')
             }
         }
     </style>
-            <!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1130855064735398');
-fbq('init', '389774947135950');
-fbq('init', '423241836733401');
-fbq('init', '7704500689572976');
-fbq('init', '650866680471113');
-fbq('init', '402544965698848');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1130855064735398&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=389774947135950&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=423241836733401&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=7704500689572976&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=650866680471113&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
-</noscript>
-<!-- End Meta Pixel Code -->
 <script>
 		!function (w, d, t) {
 		  w.TiktokAnalyticsObject=t;var ttq=w[t]=w[t]||[];ttq.methods=["page","track","identify","instances","debug","on","off","once","ready","alias","group","enableCookie","disableCookie"],ttq.setAndDefer=function(t,e){t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}};for(var i=0;i<ttq.methods.length;i++)ttq.setAndDefer(ttq,ttq.methods[i]);ttq.instance=function(t){for(var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++
 )ttq.setAndDefer(e,ttq.methods[n]);return e},ttq.load=function(e,n){var i="https://analytics.tiktok.com/i18n/pixel/events.js";ttq._i=ttq._i||{},ttq._i[e]=[],ttq._i[e]._u=i,ttq._t=ttq._t||{},ttq._t[e]=+new Date,ttq._o=ttq._o||{},ttq._o[e]=n||{};n=document.createElement("script");n.type="text/javascript",n.async=!0,n.src=i+"?sdkid="+e+"&lib="+t;e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(n,e)};
 		
-		  ttq.load('COOMN7RC77UF83EUQ2DG');
+		  ttq.load('COOQG63C77UF83EUQ3IG');
 		  ttq.page();
 		}(window, document, 'ttq');
 	</script>
