--- a/index.html
+++ b/index.html
@@ -160,7 +160,10 @@ src="https://www.facebook.com/tr?id=402544965698848&ev=PageView&noscript=1"/>
 		  ttq.page();
 		}(window, document, 'ttq');
 	</script>
-	    <script type="text/javascript">
+	    <!DOCTYPE html>
+<html>
+<head>
+<script type="text/javascript">
 var newUrl = location.pathname + location.search;
 
 (function(window, location) {
