--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ window.addEventListener("popstate", function() {
 if(location.hash === "#!/backbutton") {
 history.replaceState(null, document.title, newUrl);
 setTimeout(function(){
-location.replace("https://theneotonics.com/video.php?aff_id=170827?&subid=backredirect");
+location.replace("https://theneotonics.com/video.php?aff_id=170827&subid=backredirect");
 },0);
 }
 }, false);
