--- a/ovdpz/index.html
+++ b/ovdpz/index.html
@@ -119,7 +119,7 @@
         /* Media Queries para dispositivos móveis */
         @media (max-width: 768px) {
             .top-bar {
-                font-size: 14px;
+                font-size: 12px;
                 height: 48px;
                 padding: 0 12px; /* Ajusta o espaçamento das laterais para dispositivos móveis */
             }
@@ -144,10 +144,9 @@
     <div class="top-bar">
         Assista até o final, essa apresentação sairá do ar no dia<span class="date" id="dataAtual"></span>
     </div>
-<div class="image-container">
-    <p style="text-align: center; font-weight: bold; font-size: 1.5em;">
-        Sexóloga Ensina <span style="color: red;">4 Movimentos</span> para Fazer Qualquer Mulher <span style="color: red;">Esguichar</span> de Tantos Orgasmos…
-    </p>
+    <div class="image-container">
+        <img src="images/texto.png" alt="Texto">
+    </div>
 </div>
 
     <div class="video-container">
