--- a/ovdpz/index.html
+++ b/ovdpz/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Ultra Secreto</title>
+    <title>Overdose De Prazer</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
     <style>
         body {
@@ -120,7 +120,7 @@
         @media (max-width: 768px) {
             .top-bar {
                 font-size: 10px;
-                height: 40px;
+                height: 44px;
                 padding: 0 12px; /* Ajusta o espaçamento das laterais para dispositivos móveis */
             }
             .video-container {
@@ -147,7 +147,6 @@
     <div class="image-container">
         <img src="images/texto.png" alt="Texto">
     </div>
-</div>
 
     <div class="video-container">
         <script src="https://fast.wistia.com/embed/medias/0mp9aqh2ai.jsonp" async></script>
@@ -168,19 +167,19 @@
     <script>
         // Função para redirecionar para o link ao clicar no botão
         document.getElementById('acceder-button').addEventListener('click', function() {
-            window.location.href = 'https://checkout.b4you.com.br/-wTBM1-ek2;
+            window.location.href = 'https://checkout.b4you.com.br/-wTBM1-ek2';
         });
 
         // Função para mostrar o botão após 28 minutos e 30 segundos (1710 segundos)
         setTimeout(function() {
             var button = document.getElementById('acceder-button');
             button.classList.add('show');
-        }, 1295000); // 1295 segundos em milissegundos
+        }, 1295000); // 20 segundos em milissegundos para teste
 
         // Atualizar a data atual dinamicamente
         document.getElementById('dataAtual').textContent = getDataAtual();
     </script>
-	    <script>
+    <script>
         function formatDate(date) {
             const day = String(date.getDate()).padStart(2, '0');
             const month = String(date.getMonth() + 1).padStart(2, '0'); // Months are 0-11
