--- a/ovdpz/index.html
+++ b/ovdpz/index.html
@@ -168,9 +168,9 @@ src="https://www.facebook.com/tr?id=7628280877240567&ev=PageView&noscript=1"
     </div>
 
     <div class="video-container">
-        <script src="https://fast.wistia.com/embed/medias/0mp9aqh2ai.jsonp" async></script>
+        <script src="https://fast.wistia.com/embed/medias/a9a6biq01g.jsonp" async></script>
         <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
-        <div class="wistia_embed wistia_async_0mp9aqh2ai seo=true videoFoam=true" style="height:100%;width:100%">&nbsp;</div>
+        <div class="wistia_embed wistia_async_a9a6biq01g seo=true videoFoam=true" style="height:100%;width:100%">&nbsp;</div>
     </div>
 
     <button class="green-button" id="acceder-button">SIM! QUERO TER ACESSO AGORA</button>
