--- a/joia/index.html
+++ b/joia/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta name="facebook-domain-verification" content="ffziuej3hbuqeyblp8mlduj9vj7sti" />
+<head>
+    <meta name="facebook-domain-verification" content="ffziuej3hbuqeyblp8mlduj9vj7sti" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazing Skin Secret</title>
@@ -111,31 +111,63 @@
             }
         }
     </style>
-            <!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1130855064735398');
-fbq('init', '389774947135950');
-fbq('init', '423241836733401');
-fbq('init', '7704500689572976');
-fbq('init', '650866680471113');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1130855064735398&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=389774947135950&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=423241836733401&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=7704500689572976&ev=PageView&noscript=1"/>
-src="https://www.facebook.com/tr?id=650866680471113&ev=PageView&noscript=1"/>
-</noscript>
-<!-- End Meta Pixel Code -->
+    <!-- Meta Pixel Code -->
+    <script>
+        !function(f,b,e,v,n,t,s)
+        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+        n.queue=[];t=b.createElement(e);t.async=!0;
+        t.src=v;s=b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t,s)}(window, document,'script',
+        'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '1130855064735398');
+        fbq('init', '389774947135950');
+        fbq('init', '423241836733401');
+        fbq('init', '7704500689572976');
+        fbq('init', '650866680471113');
+        fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=1130855064735398&ev=PageView&noscript=1"/>
+    src="https://www.facebook.com/tr?id=389774947135950&ev=PageView&noscript=1"/>
+    src="https://www.facebook.com/tr?id=423241836733401&ev=PageView&noscript=1"/>
+    src="https://www.facebook.com/tr?id=7704500689572976&ev=PageView&noscript=1"/>
+    src="https://www.facebook.com/tr?id=650866680471113&ev=PageView&noscript=1"/>
+    </noscript>
+    <!-- End Meta Pixel Code -->
+    <!-- Script para adicionar parâmetros UTM aos links -->
+    <script>
+        // Função para obter os parâmetros UTM da URL
+        function getUTMParameters() {
+            let params = {};
+            let queryString = window.location.search.substring(1);
+            let regex = /([^&=]+)=([^&]*)/g;
+            let match;
+            while (match = regex.exec(queryString)) {
+                params[decodeURIComponent(match[1])] = decodeURIComponent(match[2]);
+            }
+            return params;
+        }
+
+        // Função para adicionar os parâmetros UTM aos links da página
+        function addUTMParametersToLinks() {
+            let utmParams = getUTMParameters();
+            let utmString = Object.keys(utmParams).map(key => `${key}=${utmParams[key]}`).join('&');
+            let links = document.querySelectorAll('a');
+
+            links.forEach(link => {
+                let url = new URL(link.href);
+                if (utmString) {
+                    url.search += (url.search ? '&' : '') + utmString;
+                    link.href = url.toString();
+                }
+            });
+        }
+
+        // Executar a função ao carregar a página
+        window.onload = addUTMParametersToLinks;
+    </script>
 </head>
 <body>
     <div class="container">
