--- a/joia/index.html
+++ b/joia/index.html
@@ -174,9 +174,9 @@
         <div class="headline">99.8% of women don't know this</div>
         <div class="subheadline">Scientists reveal <span class="bold-text">how to remove wrinkles and skin spots in</span> minutes</div>
         <div class="image-container">
-            <a href="https://theneotonics.com/video.php?aff_id=170827?"><img src="images/play.webp" alt="Amazing Skin Secret"></a>
+            <a href="https://theneotonics.com/video.php?aff_id=170827"><img src="images/play.webp" alt="Amazing Skin Secret"></a>
         </div>
-        <a href="https://theneotonics.com/video.php?aff_id=170827?" class="cta-button">Tap Here To Watch The Video</a>
+        <a href="https://theneotonics.com/video.php?aff_id=170827" class="cta-button">Tap Here To Watch The Video</a>
         <div class="main-text">
             Renowned scientists from the University College Cork have uncovered a secret component in an Egyptian root that's 20 times more potent than Retinol.<br><br>
             Apply it to your face every day for 15 seconds to boost skin elasticity, erase wrinkles, and fade dark spots, taking off 10 years from your age.
@@ -184,10 +184,10 @@
             This groundbreaking discovery is shaking up the Botox industry! They're trying to bring down this website.<br><br>
             Tap the button below and watch the presentation on the 'Egyptian Ritual' until the end, before it's too late.
         </div>
-        <a href="https://theneotonics.com/video.php?aff_id=170827?" class="cta-button">Watch Now</a>
+        <a href="https://theneotonics.com/video.php?aff_id=170827" class="cta-button">Watch Now</a>
     </div>
     <div class="footer">
-        <p><a href="https://theneotonics.com/video.php?aff_id=170827?" style="color: #fff; text-decoration: none;">Privacy Policy | Earnings | Contact</a></p>
+        <p><a href="https://theneotonics.com/video.php?aff_id=170827" style="color: #fff; text-decoration: none;">Privacy Policy | Earnings | Contact</a></p>
         <p>Copyright 2024.</p>
         <p>All rights reserved</p>
         <p>This site is not affiliated with Facebook, Inc. or Facebook.com, and is not sponsored or endorsed by Facebook</p>
