--- a/joia/index.html
+++ b/joia/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta name="facebook-domain-verification" content="ffziuej3hbuqeyblp8mlduj9vj7sti" />
+    <head>
+        <meta name="facebook-domain-verification" content="ffziuej3hbuqeyblp8mlduj9vj7sti" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazing Skin Secret</title>
@@ -111,34 +111,61 @@
             }
         }
     </style>
-    <!-- Meta Pixel Code -->
-    <script>
-        !function(f,b,e,v,n,t,s)
-        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-        n.queue=[];t=b.createElement(e);t.async=!0;
-        t.src=v;s=b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t,s)}(window, document,'script',
-        'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '1130855064735398');
-        fbq('init', '389774947135950');
-        fbq('init', '423241836733401');
-        fbq('init', '7704500689572976');
-        fbq('init', '650866680471113');
-        fbq('track', 'PageView');
-    </script>
-    <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=1130855064735398&ev=PageView&noscript=1"/>
-    src="https://www.facebook.com/tr?id=389774947135950&ev=PageView&noscript=1"/>
-    src="https://www.facebook.com/tr?id=423241836733401&ev=PageView&noscript=1"/>
-    src="https://www.facebook.com/tr?id=7704500689572976&ev=PageView&noscript=1"/>
-    src="https://www.facebook.com/tr?id=650866680471113&ev=PageView&noscript=1"/>
-    </noscript>
-    <!-- End Meta Pixel Code -->
-    <!-- Script para adicionar parâmetros UTM aos links -->
-    <script>
-        // Função para obter os parâmetros UTM da URL
+            <!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1130855064735398');
+fbq('init', '389774947135950');
+fbq('init', '423241836733401');
+fbq('init', '7704500689572976');
+fbq('init', '650866680471113');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1130855064735398&ev=PageView&noscript=1"/>
+src="https://www.facebook.com/tr?id=389774947135950&ev=PageView&noscript=1"/>
+src="https://www.facebook.com/tr?id=423241836733401&ev=PageView&noscript=1"/>
+src="https://www.facebook.com/tr?id=7704500689572976&ev=PageView&noscript=1"/>
+src="https://www.facebook.com/tr?id=650866680471113&ev=PageView&noscript=1"/>
+</noscript>
+<!-- End Meta Pixel Code -->
+</head>
+<body>
+    <div class="container">
+        <div class="headline">99.8% of women don't know this</div>
+        <div class="subheadline">Scientists reveal <span class="bold-text">how to remove wrinkles and skin spots in</span> minutes</div>
+        <div class="image-container">
+            <a href="https://theneotonics.com/video.php?aff_id=170827?"><img src="images/play.webp" alt="Amazing Skin Secret"></a>
+        </div>
+        <a href="https://theneotonics.com/video.php?aff_id=170827?" class="cta-button">Tap Here To Watch The Video</a>
+        <div class="main-text">
+            Renowned scientists from the University College Cork have uncovered a secret component in an Egyptian root that's 20 times more potent than Retinol.<br><br>
+            Apply it to your face every day for 15 seconds to boost skin elasticity, erase wrinkles, and fade dark spots, taking off 10 years from your age.
+            <br><br>
+            This groundbreaking discovery is shaking up the Botox industry! They're trying to bring down this website.<br><br>
+            Tap the button below and watch the presentation on the 'Egyptian Ritual' until the end, before it's too late.
+        </div>
+        <a href="https://theneotonics.com/video.php?aff_id=170827?" class="cta-button">Watch Now</a>
+    </div>
+    <div class="footer">
+        <p><a href="https://theneotonics.com/video.php?aff_id=170827?" style="color: #fff; text-decoration: none;">Privacy Policy | Earnings | Contact</a></p>
+        <p>Copyright 2024.</p>
+        <p>All rights reserved</p>
+        <p>This site is not affiliated with Facebook, Inc. or Facebook.com, and is not sponsored or endorsed by Facebook</p>
+        <p>Disclaimer: This site is provided solely for educational purposes.</p>
+        <p>We recommend consulting a health professional before implementing any strategies discussed on this website.</p>
+        <p>DISCLAIMER: The content of this website is based on the author’s opinion and is provided on an “AS IS” and “AS AVAILABLE” basis. We recommend conducting your own research and verifying information with other sources when seeking information about health issues. Always review the information carefully with your professional healthcare provider before using any of the protocols presented on this website and/or in the product sold here. The author is not engaged in rendering medical or similar professional services or advice via this website, and the information provided is not intended to replace medical advice offered by a physician or other licensed healthcare provider.</p>
+    </div>
+    <script type="text/javascript" src="https://buygoods.com/js/facebook_link_manager.js"></script>
+	<script>
+    document.addEventListener('DOMContentLoaded', function() {
         function getUTMParameters() {
             let params = {};
             let queryString = window.location.search.substring(1);
@@ -150,7 +177,6 @@
             return params;
         }
 
-        // Função para adicionar os parâmetros UTM aos links da página
         function addUTMParametersToLinks() {
             let utmParams = getUTMParameters();
             let utmString = Object.keys(utmParams).map(key => `${key}=${utmParams[key]}`).join('&');
@@ -165,36 +191,9 @@
             });
         }
 
-        // Executar a função ao carregar a página
-        window.onload = addUTMParametersToLinks;
-    </script>
-</head>
-<body>
-    <div class="container">
-        <div class="headline">99.8% of women don't know this</div>
-        <div class="subheadline">Scientists reveal <span class="bold-text">how to remove wrinkles and skin spots in</span> minutes</div>
-        <div class="image-container">
-            <a href="https://theneotonics.com/video.php?aff_id=170827"><img src="images/play.webp" alt="Amazing Skin Secret"></a>
-        </div>
-        <a href="https://theneotonics.com/video.php?aff_id=170827" class="cta-button">Tap Here To Watch The Video</a>
-        <div class="main-text">
-            Renowned scientists from the University College Cork have uncovered a secret component in an Egyptian root that's 20 times more potent than Retinol.<br><br>
-            Apply it to your face every day for 15 seconds to boost skin elasticity, erase wrinkles, and fade dark spots, taking off 10 years from your age.
-            <br><br>
-            This groundbreaking discovery is shaking up the Botox industry! They're trying to bring down this website.<br><br>
-            Tap the button below and watch the presentation on the 'Egyptian Ritual' until the end, before it's too late.
-        </div>
-        <a href="https://theneotonics.com/video.php?aff_id=170827" class="cta-button">Watch Now</a>
-    </div>
-    <div class="footer">
-        <p><a href="https://theneotonics.com/video.php?aff_id=170827" style="color: #fff; text-decoration: none;">Privacy Policy | Earnings | Contact</a></p>
-        <p>Copyright 2024.</p>
-        <p>All rights reserved</p>
-        <p>This site is not affiliated with Facebook, Inc. or Facebook.com, and is not sponsored or endorsed by Facebook</p>
-        <p>Disclaimer: This site is provided solely for educational purposes.</p>
-        <p>We recommend consulting a health professional before implementing any strategies discussed on this website.</p>
-        <p>DISCLAIMER: The content of this website is based on the author’s opinion and is provided on an “AS IS” and “AS AVAILABLE” basis. We recommend conducting your own research and verifying information with other sources when seeking information about health issues. Always review the information carefully with your professional healthcare provider before using any of the protocols presented on this website and/or in the product sold here. The author is not engaged in rendering medical or similar professional services or advice via this website, and the information provided is not intended to replace medical advice offered by a physician or other licensed healthcare provider.</p>
-    </div>
-    <script type="text/javascript" src="https://buygoods.com/js/facebook_link_manager.js"></script>
+        addUTMParametersToLinks();
+    });
+</script>
+
 </body>
 </html>
